--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,6 @@
 /*==================== GOOGLE FONTS ====================*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Source+Code+Pro&display=swap');
 
 /*==================== VARIABLES CSS ====================*/
 :root {
@@ -1290,3 +1291,94 @@ img{
         grid-template-columns: repeat(2, 1fr);
     }
 }
+
+/* Terminal Styles */
+
+
+.terminal-section {
+    font-family: "Source Code Pro", Monaco, monospace;
+    font-size: 17px;
+    background-color: var(--body-color);
+    color: var(--title-color);
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 650px;
+  }
+  
+  .terminal {
+    width: 80%;
+        /* max-width: 600px; */
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--body-color);
+    border: 1px solid var(--title-color);
+    padding: 10px;
+    border-radius: 5px;
+    /* box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.5); */
+    overflow: auto;
+  }
+  
+  .prompt {
+    color: rgb(0, 200, 0);
+    margin-right: 5px;
+    font-weight: bold;
+    display: inline-block;
+    float: left;
+    white-space: nowrap; /* Prevent text from wrapping */
+  }
+  
+  input {
+    background-color: transparent;
+    border: none;
+    color: var(--title-color);
+    font-size: inherit;
+    font-family: "Source Code Pro", Monaco, monospace;
+    width: 100%;
+    outline: none;
+    flex-grow: 1;
+    caret-color: rgb(0, 200, 0);
+  }
+  
+  .output {
+    margin-top: 10px;
+    white-space: pre-wrap;
+  }
+  
+  /* Add this to your existing styles.css or modify it accordingly */
+  
+  .input-container {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+  }
+  
+  /* Track (background) color */
+  ::-webkit-scrollbar {
+    background-color: transparent; /* Set the background color to transparent */
+    border-radius: 10px; /* Add round corners to the scrollbar */
+  }
+  
+  /* Handle (thumb) color */
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--first-color); /* Set the thumb color to green */
+    border-radius: 10px; /* Add round corners to the thumb */
+  }
+  
+  /* Change the scrollbar's corner color (between the vertical and horizontal scrollbars) */
+  ::-webkit-scrollbar-corner {
+    background-color: #f2f2f2; /* Change to your desired color */
+  }
+  
+  .terminal-container {
+    display: flex;
+    align-items: center;
+  }
+  
+  .terminal-image {
+    margin-right: 20px;
+  }
+  
