--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1323,7 +1323,8 @@ img{
   }
   
   .prompt {
-    color: rgb(0, 200, 0);
+    /* color: rgb(0, 200, 0); */
+    color: #01d293;
     margin-right: 5px;
     font-weight: bold;
     display: inline-block;
@@ -1340,7 +1341,8 @@ img{
     width: 100%;
     outline: none;
     flex-grow: 1;
-    caret-color: rgb(0, 200, 0);
+    /* caret-color: rgb(0, 200, 0); */
+    color: #01d293;
   }
   
   .output {
